--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,14 +29,18 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 }
 
 ul{
-    margin-block-start: 0;
+    margin-block-start: 0px;
     margin-block-end: 0;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 0px;
 }
+.markdown ul{
+    margin-left: 20px;
+}
 li{
-  list-style: none;
+  /* list-style: none; */
+  /* text-indent: 1rem; */
 }
 ul, li{
   margin: 0;
@@ -70,32 +74,27 @@ ul, li{
 
 /* projects */
 .projects {
-  /* outline: 1px solid red; */
+  padding: 10px;
 }
 .projects .primaryTile {
   text-align: center;
   padding: 15px;
 }
-
-.projects .container {
-  margin: auto;
-  outline: 1px solid red;
-}
-
 .projects .content {
-  width: 100%;
+  max-width: 1200px;
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
-
 .projects .item {
+  box-sizing: border-box;
   border: 2px solid gray;
-  width: 32%;
+  width: 31%;
+  margin: 1.166667%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border-radius: 15px;
-  margin-bottom: 25px;
   overflow: hidden;
 }
 .projects .item img{
@@ -104,6 +103,7 @@ ul, li{
 }
 .projects .item .txt{
   padding: 10px;
+  flex-grow: 1;
 }
 .projects .operation{
   display: flex;
@@ -113,4 +113,9 @@ ul, li{
   padding: 5px 10px;
   margin: var(--basic-gap);
   flex-grow: 1;
+}
+
+.projects .details li::before{
+  content: '░';
+  padding-right: 10px;
 }
