--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -3,9 +3,6 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  background-color: #011318;
 }
 
-.featureSvg {
-  height: 200px;
-  width: 200px;
-}
