--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,11 +3,13 @@
  * and scoped locally.
  */
 
+
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
   position: relative;
-  overflow: hidden;
+  overflow: hidden;  
+  /* background-color: #011318; */
 }
 
 @media screen and (max-width: 966px) {
